#1002: Disabling filtering without clearing keyword leaves filtered state
#1001: Connection tree context menu hotkeys stop working and disappear in some cases
#999: Some hotkeys stop working if File menu was called when PuTTy Saved Sessions was selected
#998: Can sometimes add connection under PuTTY Sessions node
#991: Error when deleting host in filtered view
#961: Connections file overwritten if correct decryption password not provided


1.76.4 Alpha 6 (2018-06-03):

Features/Enhancements:
----------------------
#948: Fixed issue where many menu item translations were not being used
#942: Improved Russian translation of several items
#924: Notification for "No Host Specified" when clicking folders in quick-connect menu
#902: Menu bar can once again be moved. View -> "Lock toolbar positions" now also locks the menu position
Added option for creating an empty panel on startup

Fixes:
------
#938: Minor layout improvements on the Port Scan screen
#916: Default properties were not being saved


1.76.3 Alpha 5 (2018-03-14):

Fixes:
------
#911: Csv exports sometimes do not include all fields
#807: Inheritance is sometimes turned on for nodes under root Connections node


1.76.2 Alpha 4 (2018-03-03):

Fixes:
------
#899: DoNotPlay is Case Sensitive in XML Serialization


1.76.1 Alpha 3 (2018-02-24):

Features/Enhancements:
----------------------
#625: Added ability to import mRemoteNG formatted CSV files
#648: The port scan ping timeout is now configurable

Fixes:
------
Fixed a few Xml serialization bugs that would occur if boolean values weren't capitalized


1.76.0 Alpha 2 (2018-02-01):

Features/Enhancements:
----------------------
#838: Added an option to lock toolbars
#836: Added a Read Only option for SQL connections
#829: Add option that fixes connecting to Azure instances with LoadBalanceInfo

Fixes:
------
#840: Fix theme loading issue in installer version
#800: Fixed issue with PuTTY sessions not showing some extended characters