@@ -14,6 +14,7 @@ Fixes:
 #999: Some hotkeys stop working if File menu was called when PuTTy Saved Sessions was selected
 #998: Can sometimes add connection under PuTTY Sessions node
 #991: Error when deleting host in filtered view
+#971: Portable Settings now apply to any machine they are used on
 #961: Connections file overwritten if correct decryption password not provided
 
 
